# WG-Buchungstool-Backend

./: .clang-format  .gitignore  CMakeLists.txt
doc/: projektplan.md
resources/: debug.html  hallo_marcel.html  index.html
src/: http_server.c  httplib.c  httplib.h  stringstructlib.c  stringstructlib.h
test/: httplib-test.c
test/resources/: test.txt
